--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
   "scripts": {
     "start": "cd server && npm install && node ./index.js",
-    "build":"cd client && npm run build",
+    "build":"cd client && npm install --only=dev && npm install && npm run build ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
