--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
   "scripts": {
     "start": "cd server && npm install && node ./index.js",
-    "build":"cd client && npm install --only=dev && npm install && npm run build ",
+    "build":"cd client && npm install && npm run build ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
