--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "start": "cd server && npm install && node ./index.js",
-    "build":"cd client && npm install && npm run build ",
+    "build": "cd client && npm install && npm run build ",
+    "dev": "concurrently \"cd client && npm start\" \"cd server && nodemon ./index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/benayat/fullstack-boilerplate-restapi/issues"
   },
-  "homepage": "https://github.com/benayat/fullstack-boilerplate-restapi#readme"
+  "homepage": "https://github.com/benayat/fullstack-boilerplate-restapi#readme",
+  "proxy": "http://localhost:5000",
+  "dependencies": {
+    "concurrently": "^6.0.2",
+    "localforage": "^1.9.0"
+  }
 }
