--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "iink-js": "^1.4.5",
     "mongoose": "^5.12.5",
+    "tesseract.js": "^2.1.4",
     "validator": "^13.6.0"
   }
 }
